--- a/01-minesweeper/index.html
+++ b/01-minesweeper/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- <section id="page"> -->
+      <!-- <header>Header</header>
+      <nav>Navigation</nav>
+      <main></main> -->
+    <!-- </section> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
