Refactor y mejora la estructura del código: actualiza el HTML, ajusta la configuración del tablero, optimiza el CSS y mejora la lógica de renderizado de celdas.

--- a/02-minesweeper-v2/index.html
+++ b/02-minesweeper-v2/index.html
@@ -7,8 +7,10 @@
     <title>Minesweeper</title>
   </head>
   <body>
-    <h1 style="text-align: center;">Minesweeper</h1>
+    <h1>Minesweeper</h1>
     <div id="board"></div>
+    <!-- <div id="app">
+    </div> -->
 
     <script type="module" src="/src/main.ts"></script>
   </body>
